# research-assistant

./: .example.env  .gitignore  Dockerfile  Makefile  README.md  chroma.sqlite3  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  research_assistant.ipynb
docs/: artificial_intelligence.md  budget_speech.txt  data_science_overview.txt  machine_learning_basics.txt  neural_networks.md
src/app/: agent.py  ingestor.py  interfaces.py  loader.py  splitter.py
src/cmd/: cli.py  main.py
src/config/: base.py  db.py  llm.py  loader.py  logging.py  settings.py
src/domain/: interfaces.py
src/entrypoints/: dependencies.py
src/entrypoints/cli/: commands.py
src/entrypoints/http/: __init__.py  base.py
src/entrypoints/http/agent/: models.py  routes.py
src/infrastructure/: json_cache.py  loader.py  splitter.py
src/interfaces/cli/: commands.py
src/shared/: helpers.py  json_cache.py
src/shared/logging/: formatters.py  logger.py
