[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Umit Silwal Khatri", email = "silwalumit@gmail.com" }
]
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/research_assistant"]

[tool.rye.scripts]
cli = { cmd = "python -m src.cmd.cli"} 
